Closed
Bug 900439
Opened 12 years ago
Closed 12 years ago
WebGL2 unable to initialize OpenGL on Linux/Nvidia GT 330M
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla25
People
(Reporter: shakesoda, Assigned: guillaume.abadie)
References
Details
Attachments
(2 files)
|
46.81 KB,
text/plain
|
Details | |
|
999 bytes,
patch
|
jgilbert
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:22.0) Gecko/20100101 Firefox/22.0 (Beta/Release)
Build ID: 20130627161625
Steps to reproduce:
Context creation failed despite having all the required extensions on the host machine. Here's the code I used: http://excessive.io/demos/webgl2/.
Using NVIDIA 304.88 drivers on GeForce GT 330M with Ubuntu 13.04. Attached glxinfo output.
Nightly version is 25.0a1 (2013-07-31)
Actual results:
Error: WebGL: Error during OpenGL initialization
Expected results:
Should've gotten a usable WebGL2 context.
| Assignee | ||
Comment 1•12 years ago
|
||
Hi! Welcome on Bugzilla!
We are actually doing some changes on the OpenGL extension management. And your bug seams to be related to that. I'm looking for what could be wrong. =)
Thanks for reporting.
| Assignee | ||
Comment 2•12 years ago
|
||
I don't have a similar configuration right now.
Could you give us the log of the nightly execution that only load this page?
Thank you!
Flags: needinfo?(shakesoda)
| Reporter | ||
Comment 3•12 years ago
|
||
Where can I find that log? I didn't see anything more specific in the terminal output or in the debug console. Do I need a debug build or to change a flag?
| Assignee | ||
Comment 4•12 years ago
|
||
Oups sorry, I have forgotten this point.
Yes indeed, you would need to build with --enable-debug and --disable-optimize. But that might take you a long time (~one hour to clone mozilla central + ~20 minutes to build on a 8 cores CPU).
Or we can wait for landing bugs 900101 and 898615 that is planing to improve that. But that might take one week.
Comment 5•12 years ago
|
||
Actually, you can just grab a debug build from a green central push:
http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-linux64-debug/1375389313/firefox-25.0a1.en-US.linux-x86_64.tar.bz2
Comment 6•12 years ago
|
||
Also, can we get a paste of your about:support?
That'll give us more info about your graphics, and also make sure you have the correct webgl2 pref flipped.
| Reporter | ||
Comment 7•12 years ago
|
||
The build there crashes on startup for me - not sure what's up with that.
I did enable webgl2 in the prefs, and here's the about:support info:
Application Basics
------------------
Name: Firefox
Version: 25.0a1
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:25.0) Gecko/20130801 Firefox/25.0
Extensions
----------
Name: Ubuntu Firefox Modifications
Version: 2.6
Enabled: false
ID: ubufox@ubuntu.com
Name: Ubuntu Online Accounts
Version: 0.4.5
Enabled: false
ID: online-accounts@lists.launchpad.net
Name: Unity Desktop Integration
Version: 2.4.6
Enabled: false
ID: webapps-team@lists.launchpad.net
Name: Unity Websites integration
Version: 2013.04.05.beta
Enabled: false
ID: {2e1445b0-2682-11e1-bfc2-0800200c9a66}
Important Modified Preferences
------------------------------
browser.cache.disk.capacity: 358400
browser.cache.disk.smart_size_cached_value: 358400
browser.cache.disk.smart_size.first_run: false
browser.cache.disk.smart_size.use_old_max: false
browser.places.smartBookmarksVersion: 4
browser.sessionstore.upgradeBackup.latestBuildID: 20130801030223
browser.startup.homepage_override.buildID: 20130801030223
browser.startup.homepage_override.mstone: 25.0a1
extensions.lastAppVersion: 25.0a1
network.cookie.prefsMigrated: true
places.database.lastMaintenance: 1375321305
places.history.expiration.transient_current_max_pages: 100041
plugin.disable_full_page_plugin_for_types: application/pdf
plugin.importedState: true
privacy.donottrackheader.enabled: true
privacy.sanitize.migrateFx3Prefs: true
storage.vacuum.last.index: 0
storage.vacuum.last.places.sqlite: 1375321305
webgl.enable-prototype-webgl2: true
webgl.prefer-native-gl: true
Graphics
--------
Adapter Description: NVIDIA Corporation -- GeForce GT 330M/PCIe/SSE2
Device ID: GeForce GT 330M/PCIe/SSE2
Driver Version: 3.3.0 NVIDIA 304.88
GPU Accelerated Windows: 0/1 Basic
Vendor ID: NVIDIA Corporation
WebGL Renderer: NVIDIA Corporation -- GeForce GT 330M/PCIe/SSE2
windowLayerManagerRemote: false
AzureCanvasBackend: cairo
AzureContentBackend: none
AzureFallbackCanvasBackend: none
AzureSkiaAccelerated: 0
JavaScript
----------
Incremental GC: true
Accessibility
-------------
Activated: false
Prevent Accessibility: 0
Library Versions
----------------
NSPR
Expected minimum version: 4.10.1 Beta
Version in use: 4.10.1 Beta
NSS
Expected minimum version: 3.15.1 Basic ECC Beta
Version in use: 3.15.1 Basic ECC Beta
NSSSMIME
Expected minimum version: 3.15.1 Basic ECC Beta
Version in use: 3.15.1 Basic ECC Beta
NSSSSL
Expected minimum version: 3.15.1 Basic ECC Beta
Version in use: 3.15.1 Basic ECC Beta
NSSUTIL
Expected minimum version: 3.15.1 Beta
Version in use: 3.15.1 Beta
| Assignee | ||
Comment 8•12 years ago
|
||
(In reply to Colby Klein from comment #7)
> The build there crashes on startup for me - not sure what's up with that.
> I did enable webgl2 in the prefs, and here's the about:support info:
>
> Application Basics
> ------------------
>
> Name: Firefox
> Version: 25.0a1
> User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:25.0) Gecko/20130801
> Firefox/25.0
>
> Extensions
> ----------
>
> Name: Ubuntu Firefox Modifications
> Version: 2.6
> Enabled: false
> ID: ubufox@ubuntu.com
>
> Name: Ubuntu Online Accounts
> Version: 0.4.5
> Enabled: false
> ID: online-accounts@lists.launchpad.net
>
> Name: Unity Desktop Integration
> Version: 2.4.6
> Enabled: false
> ID: webapps-team@lists.launchpad.net
>
> Name: Unity Websites integration
> Version: 2013.04.05.beta
> Enabled: false
> ID: {2e1445b0-2682-11e1-bfc2-0800200c9a66}
>
> Important Modified Preferences
> ------------------------------
>
> browser.cache.disk.capacity: 358400
> browser.cache.disk.smart_size_cached_value: 358400
> browser.cache.disk.smart_size.first_run: false
> browser.cache.disk.smart_size.use_old_max: false
> browser.places.smartBookmarksVersion: 4
> browser.sessionstore.upgradeBackup.latestBuildID: 20130801030223
> browser.startup.homepage_override.buildID: 20130801030223
> browser.startup.homepage_override.mstone: 25.0a1
> extensions.lastAppVersion: 25.0a1
> network.cookie.prefsMigrated: true
> places.database.lastMaintenance: 1375321305
> places.history.expiration.transient_current_max_pages: 100041
> plugin.disable_full_page_plugin_for_types: application/pdf
> plugin.importedState: true
> privacy.donottrackheader.enabled: true
> privacy.sanitize.migrateFx3Prefs: true
> storage.vacuum.last.index: 0
> storage.vacuum.last.places.sqlite: 1375321305
> webgl.enable-prototype-webgl2: true
> webgl.prefer-native-gl: true
>
> Graphics
> --------
>
> Adapter Description: NVIDIA Corporation -- GeForce GT 330M/PCIe/SSE2
> Device ID: GeForce GT 330M/PCIe/SSE2
> Driver Version: 3.3.0 NVIDIA 304.88
> GPU Accelerated Windows: 0/1 Basic
> Vendor ID: NVIDIA Corporation
> WebGL Renderer: NVIDIA Corporation -- GeForce GT 330M/PCIe/SSE2
> windowLayerManagerRemote: false
> AzureCanvasBackend: cairo
> AzureContentBackend: none
> AzureFallbackCanvasBackend: none
> AzureSkiaAccelerated: 0
>
> JavaScript
> ----------
>
> Incremental GC: true
>
> Accessibility
> -------------
>
> Activated: false
> Prevent Accessibility: 0
>
> Library Versions
> ----------------
>
> NSPR
> Expected minimum version: 4.10.1 Beta
> Version in use: 4.10.1 Beta
>
> NSS
> Expected minimum version: 3.15.1 Basic ECC Beta
> Version in use: 3.15.1 Basic ECC Beta
>
> NSSSMIME
> Expected minimum version: 3.15.1 Basic ECC Beta
> Version in use: 3.15.1 Basic ECC Beta
>
> NSSSSL
> Expected minimum version: 3.15.1 Basic ECC Beta
> Version in use: 3.15.1 Basic ECC Beta
>
> NSSUTIL
> Expected minimum version: 3.15.1 Beta
> Version in use: 3.15.1 Beta
You also need to set webgl.enable-draft-extensions to true.
| Reporter | ||
Comment 9•12 years ago
|
||
Thanks, that did it! I double checked the wiki, and I missed that step. Sorry for the trouble.
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Flags: needinfo?(shakesoda)
Resolution: --- → INVALID
| Assignee | ||
Comment 10•12 years ago
|
||
Jeff, My mind is WebGL 2 should be independent of webgl.enable-draft-extensions. Here is the patch.
Attachment #784708 -
Flags: review?(jgilbert)
| Assignee | ||
Comment 11•12 years ago
|
||
(In reply to Colby Klein from comment #9)
> Thanks, that did it! I double checked the wiki, and I missed that step.
> Sorry for the trouble.
No worries! =)
And you are already subscribed to Bugzilla if you find another bug. ;)
Comment 12•12 years ago
|
||
Reopening so that the patch doesn't get lost.
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: INVALID → ---
Updated•12 years ago
|
Attachment #784708 -
Flags: review?(jgilbert) → review+
| Assignee | ||
Comment 13•12 years ago
|
||
Comment 14•12 years ago
|
||
Assignee: nobody → gabadie
Status: REOPENED → RESOLVED
Closed: 12 years ago → 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in
before you can comment on or make changes to this bug.
Description
•