bug 900439 - Let WebGL 2 be independent of webgl.enable-draft-extensions - r=jgilbert